--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
             ],
             "styles": [
               "src/styles.less",
+              "src/assets/index.less",
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
             ],
             "scripts": [],
@@ -91,7 +92,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-              "src/styles.less"
+              "src/styles.less",
+              "src/assets/index.less"
             ],
             "scripts": [],
             "assets": [
